--- a/listProduct.html
+++ b/listProduct.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="css/owl.carousel.min.css">
 <!-- Begin Product Area -->
 <div ng-controller="managerProduct">
     <div class="product-area pt-60 pb-100">
@@ -11,9 +12,9 @@
                 <div id="li-new-product" class="tab-pane active show" role="tabpanel">
                     <div class="row">
                         <!-- ng-init="getNewProduct()" -->
-                        <div class="product-active" >
+                        <div class="product-active owl-carousel-2 " >
                             <!-- ng-repeat="productNew in productsNew | limitTo:8 " -->
-                            <div class="col-lg-12">
+                            <div class="col-lg-3">
                                 <div class="single-product-wrap">
                                     <div class="product-image">
                                         <a href="single-product.html">
@@ -59,7 +60,7 @@
                                 </div>
                             </div>
                             <!-- ========================================== -->
-                            <div class="col-lg-12">
+                            <div class="col-lg-3">
                                 <div class="single-product-wrap">
                                     <div class="product-image">
                                         <a href="single-product.html">
@@ -105,7 +106,7 @@
                                 </div>
                             </div>
                             <!-- ========================================== -->
-                            <div class="col-lg-12">
+                            <div class="col-lg-3">
                                 <div class="single-product-wrap">
                                     <div class="product-image">
                                         <a href="single-product.html">
@@ -151,7 +152,7 @@
                                 </div>
                             </div>
                             <!-- ====================================== -->
-                            <div class="col-lg-12">
+                            <div class="col-lg-3">
                                 <div class="single-product-wrap">
                                     <div class="product-image">
                                         <a href="single-product.html">
@@ -197,7 +198,7 @@
                                 </div>
                             </div>
                             <!-- ============================================= -->
-                            <div class="col-lg-12">
+                            <div class="col-lg-3">
                                 <div class="single-product-wrap">
                                     <div class="product-image">
                                         <a href="single-product.html">
